--- a/style.css
+++ b/style.css
@@ -6434,6 +6434,7 @@ body.home.blog .site-content {
   .site-content #secondary {
     float: none;
     width: 100%;
+    padding-right: 0;
   }
 }
 
@@ -8935,6 +8936,7 @@ h1.entry-title:before {
   color: #ffffff;
   font-size: 13.008px;
   font-size: 0.813rem;
+  position: absolute;
 }
 
 .wrap-breadcrumb .container {
