--- a/style.css
+++ b/style.css
@@ -1075,6 +1075,11 @@ dt {
   width: 100%;
 }
 
+@media screen and (max-width: 1000px) {
+ .wrapper {
+    float: none;
+  }
+}
 /*!
  *  Font Awesome 4.6.1 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
@@ -6656,8 +6661,8 @@ body.evision-no-sidebar #secondary {
 
 .site-header .wrapper-site-identity {
   background-color: #2d2d2d;
-  padding-bottom: 10px;
-  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-top: 20px;
   position: fixed;
   top: 0;
   z-index: 9999;
