--- a/style.css
+++ b/style.css
@@ -1080,6 +1080,7 @@ dt {
     float: none;
   }
 }
+
 /*!
  *  Font Awesome 4.6.1 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
@@ -7752,8 +7753,9 @@ body.single .site-main .entry-meta {
 }
 
 @media screen and (max-width: 767px){
-  .wrapper-slider .controls svg {
+  .wrapper-slider .controls{
     width: 24px;
+    display: none;
   }
 
   .wrapper-slider .controls polyline {
@@ -7972,10 +7974,9 @@ body.single .site-main .entry-meta {
 }
 
 @media screen and (max-width: 1023px){
-  .wrapper-slider #go-bottom,
-  .wrapper-slider #slide-pager {
+  .wrapper-slider #go-bottom{
     display: none;
-  }
+  }  
 }
 
 @media screen and (max-width: 767px){
