--- a/style.css
+++ b/style.css
@@ -8050,16 +8050,8 @@ body.single .site-main .entry-meta {
 
 @media screen and (min-width: 768px) {
   .wrapper-about .about-inner {
-/*    -webkit-clip-path: polygon(0% 0%, 50% 0%, 50% 100%, 0% 100%);
-    -moz-clip-path: polygon(0% 0%, 50% 0%, 50% 100%, 0% 100%);
-    -ms-clip-path: polygon(0% 0%, 50% 0%, 50% 100%, 0% 100%);
-    -o-clip-path: polygon(0% 0%, 50% 0%, 50% 100%, 0% 100%);
-    clip-path: polygon(0% 0%, 50% 0%, 50% 100%, 0% 100%);*/
-
-    -webkit-clip-path: polygon(0% 0%, 50% 0%, 50% 100%, 0% 100%);
-    clip-path: polygon(0% 0%, 50% 0%, 50% 100%, 0% 100%);
-    -webkit-clip-path: url("#clipping");
-    clip-path: url("#clipping");
+    -webkit-clip-path: inset(0 50% 0 0);
+    clip-path: inset(0 50% 0 0);   
   }
 }
 
