issue fixed in button(callback) and update version

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ Theme Name: Clean Biz
 Theme URI: http://evisionthemes.com/product/clean-biz/
 Author: eVision Themes
 Author URI: http://evisionthemes.com/
-Description: Clean Biz, a dynamic, fast responsive business WordPress theme. Whether you require an eCommerce, Business, Woo-commerce, multilingual shop, responsive layout, retina ready. If you want to build your website within a few moments, choose this multipurpose corporate theme. It suits your business. It supports most of the popular themes from WordPress repository. Compatiable with modern browser like IE 9+, Opera, Firefox, Chrome, Safari including fit in all devices like iPhone, iPad, Android, Tablet, Mac, Desktop etc. This theme is translation ready. Check out Theme Instructions at http://doc.evisionthemes.com/clean-biz and Demo at demo.evisionthemes.com/clean-biz
-Version: 1.1.0
+Description: Clean Biz, a dynamic, fast responsive business WordPress theme. Whether you require an eCommerce, Business, Woo-commerce, multilingual shop, responsive layout, retina ready. If you want to build your website within a few moments, choose this multipurpose corporate theme. It suits your business. It supports it should be popular plugins from WordPress repository. Compatiable with modern browser like IE 9+, Opera, Firefox, Chrome, Safari including fit in all devices like iPhone, iPad, Android, Tablet, Mac, Desktop etc. This theme is translation ready. Check out Theme Instructions at http://doc.evisionthemes.com/clean-biz and Demo at demo.evisionthemes.com/clean-biz
+Version: 1.1.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: clean-biz
